Book editing form (subjects/authors) added. Updated book displays with authors now that authorship table is correctly imported. Started addition of covers...

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,3 +83,14 @@ hr.listing-cell-divider {
     margin-bottom: 5px;
     margin-top: 20px;
 }
+
+
+.add-remove-field {
+    .border-radius(0) !important;
+    margin-bottom:20px;
+}
+
+.add-remove-input {
+    width: 75%;
+    display: inline-block;
+}
